--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -37,14 +37,15 @@ nav span {
 
 .nav-part2 {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   padding-top: 0.5em;
 }
 
 .nav-part2 span {
   margin: 0 1em;
   padding: 5px;
-  font-size: 0.8em;
+  font-size: 0.7em;
+  font-weight: 400;
 }
 
 .picture {
