--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -15,12 +15,29 @@ a {
   color: #fff;
 }
 
+.m-1 {
+  margin: 0.5em;
+}
+
+.p-1 {
+  padding: 0.5em;
+}
+
+.gradient {
+  /* background-image: linear-gradient(-90deg, red, yellow); */
+}
+
 .navbar-mobile {
   display: flex;
   flex-direction: column;
   background-color: #d4574a;
   text-align: center;
   padding: 0.5em 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
 
 .d-none {
@@ -55,6 +72,7 @@ nav span {
   background-size: cover;
   background-position: center;
   height: 40em;
+  margin-top: 5em;
 }
 
 .center-content {
@@ -337,6 +355,10 @@ nav span {
 
   .center-content {
     width: 70%;
+  }
+
+  .picture {
+    margin-top: 3em;
   }
 
   .picture__title {
