--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -23,6 +23,10 @@ a {
   padding: 0.5em;
 }
 
+.iblock {
+  display: inline-block;
+}
+
 .gradient {
   /* background-image: linear-gradient(-90deg, red, yellow); */
 }
