--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -27,10 +27,6 @@ a {
   display: inline-block;
 }
 
-.gradient {
-  /* background-image: linear-gradient(-90deg, red, yellow); */
-}
-
 .navbar-mobile {
   display: flex;
   flex-direction: column;
@@ -58,12 +54,12 @@ nav span {
 
 .nav-part2 {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding-top: 0.5em;
 }
 
 .nav-part2 span {
-  margin: 0 1em;
+  margin: 0 4em;
   padding: 5px;
   font-size: 0.7em;
   font-weight: 400;
@@ -355,6 +351,10 @@ nav span {
     background-color: #d4574a;
     justify-content: space-between;
     padding: 0.5em 3em;
+  }
+
+  .nav-part2 span {
+    margin: 0;
   }
 
   .center-content {
