--- a/stylesheets/result.css
+++ b/stylesheets/result.css
@@ -1,6 +1,5 @@
 body {
-  font-family: acumin-pro, "Acumin Pro", "Helvetica Neue", Helvetica, Arial,
-    sans-serif;
+  font-family: acumin-pro, "Acumin Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding: 0;
   margin: 0;
   font-size: 14px;
