--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,6 +1,11 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: acumin-pro, "Acumin Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
+  min-width: 320px;
 }
 
 * {
