--- a/stylesheets/result.css
+++ b/stylesheets/result.css
@@ -57,6 +57,12 @@ body {
   border-radius: 3px;
 }
 
+.category-options:focus,
+.city-options:focus,
+.date input:focus  {
+  outline-color: blue;
+}
+
 .buttons {
   display: flex;
   justify-content: space-between;
@@ -67,7 +73,7 @@ body {
 }
 
 .srch-btn {
-  background-color: rgb(76, 76, 138);
+  background-color: rgb(50, 50, 116);
   border: none;
   border-radius: 3px;
   flex: 1;
@@ -77,7 +83,7 @@ body {
 }
 
 .clr-btn {
-  background-color: rgb(132, 151, 94);
+  background-color: rgb(99, 121, 56);
   border-radius: 3px;
   border: none;
   flex: 2;
@@ -87,12 +93,17 @@ body {
 
 .srch-btn:focus,
 .clr-btn:focus {
-  outline-color: transparent;
+  outline: none;
+  transform: scale(1.01);
+  font-weight: bold;
 }
 
-.srch-btn:hover,
 .clr-btn:hover {
-  filter: contrast(115%);
+  background-color: #3f4a28;
+}
+
+.srch-btn:hover {
+  background-color: #1a1b42;
 }
 
 .results {
@@ -186,6 +197,7 @@ img {
   .box:hover,
   .box-week:hover {
     box-shadow: 10px 5px 5px #d4574a;
+    transform: scale(1.02);
   }
   
   .event-title a:hover {
